opencl-editor/src/com/mbien/opencl/antlr/CLParser.java
// $ANTLR 3.4 src/com/mbien/opencl/antlr/CL.g 2011-08-22 05:32:56

package com.mbien.opencl.antlr;

import java.util.Set;
import java.util.HashSet;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

/**
OpenCL 1.1 ANTLR v3 grammar

original grammar copied from:
ANSI C ANTLR v3 grammar

Translated from Jutta Degener's 1995 ANSI C yacc grammar by Terence Parr
July 2006.  The lexical rules were taken from the Java grammar.

Jutta says: "In 1985, Jeff Lee published his Yacc grammar (which
is accompanied by a matching Lex specification) for the April 30, 1985 draft
version of the ANSI C standard.  Tom Stockfisch reposted it to net.sources in
1987; that original, as mentioned in the answer to question 17.25 of the
comp.lang.c FAQ, can be ftp'ed from ftp.uu.net,
   file usenet/net.sources/ansi.c.grammar.Z.
I intend to keep this version as close to the current C Standard grammar as
possible; please let me know if you discover discrepancies. Jutta Degener, 1995"

Generally speaking, you need symbol table info to parse C; typedefs
define types and then IDENTIFIERS are either types or plain IDs.  I'm doing
the min necessary here tracking only type names.  This is a good example
of the global scope (called Symbols).  Every rule that declares its usage
of Symbols pushes a new copy on the stack effectively creating a new
symbol scope.  Also note rule declaration declares a rule scope that
lets any invoked rule see isTypedef boolean.  It's much easier than
passing that info down as parameters.  Very clean.  Rule
direct_declarator can then easily determine whether the IDENTIFIER
should be declared as a type name.

I have only tested this on a single file, though it is 3500 lines.

This grammar requires ANTLR v3.0.1 or higher.

Terence Parr
July 2006

OpenCL language extensions
Michael Bien
Jan 2011

*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class CLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BUILTIN_TYPE", "CHARACTER_LITERAL", "COMMENT", "DECIMAL_LITERAL", "EscapeSequence", "Exponent", "FLOATING_POINT_LITERAL", "FloatTypeSuffix", "HEX_LITERAL", "HexDigit", "IDENTIFIER", "IntegerTypeSuffix", "LETTER", "LINE_COMMAND", "LINE_COMMENT", "OCTAL_LITERAL", "OctalEscape", "STRING_LITERAL", "UnicodeEscape", "WS", "'!'", "'!='", "'%'", "'%='", "'&&'", "'&'", "'&='", "'('", "')'", "'*'", "'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'->'", "'.'", "'...'", "'/'", "'/='", "':'", "';'", "'<'", "'<<'", "'<<='", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'>>='", "'?'", "'['", "']'", "'^'", "'^='", "'auto'", "'bool'", "'break'", "'case'", "'const'", "'constant'", "'continue'", "'default'", "'do'", "'else'", "'enum'", "'extern'", "'for'", "'global'", "'goto'", "'if'", "'intptr_t'", "'kernel'", "'local'", "'ptrdiff_t'", "'register'", "'return'", "'size_t'", "'sizeof'", "'static'", "'struct'", "'switch'", "'typedef'", "'union'", "'unsigned'", "'void'", "'volatile'", "'while'", "'{'", "'|'", "'|='", "'||'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__95=95;
    public static final int T__96=96;
    public static final int T__97=97;
    public static final int T__98=98;
    public static final int T__99=99;
    public static final int T__100=100;
    public static final int T__101=101;
    public static final int T__102=102;
    public static final int BUILTIN_TYPE=4;
    public static final int CHARACTER_LITERAL=5;
    public static final int COMMENT=6;
    public static final int DECIMAL_LITERAL=7;
    public static final int EscapeSequence=8;
    public static final int Exponent=9;
    public static final int FLOATING_POINT_LITERAL=10;
    public static final int FloatTypeSuffix=11;
    public static final int HEX_LITERAL=12;
    public static final int HexDigit=13;
    public static final int IDENTIFIER=14;
    public static final int IntegerTypeSuffix=15;
    public static final int LETTER=16;
    public static final int LINE_COMMAND=17;
    public static final int LINE_COMMENT=18;
    public static final int OCTAL_LITERAL=19;
    public static final int OctalEscape=20;
    public static final int STRING_LITERAL=21;
    public static final int UnicodeEscape=22;
    public static final int WS=23;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators

    protected static class Symbols_scope {
        Set types;
    }
    protected Stack Symbols_stack = new Stack();



    public CLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[215+1];
         

    }

    public String[] getTokenNames() { return CLParser.tokenNames; }
    public String getGrammarFileName() { return "src/com/mbien/opencl/antlr/CL.g"; }


        boolean isTypeName(String name) {
            for (int i = Symbols_stack.size()-1; i>=0; i--) {
                Symbols_scope scope = (Symbols_scope)Symbols_stack.get(i);
                if ( scope.types.contains(name) ) {
                    return true;
                }
            }
            return false;
        }



    // $ANTLR start "translation_unit"
    // src/com/mbien/opencl/antlr/CL.g:76:1: translation_unit : ( external_declaration )+ ;
    public final void translation_unit() throws RecognitionException {
        Symbols_stack.push(new Symbols_scope());

        int translation_unit_StartIndex = input.index();


          ((Symbols_scope)Symbols_stack.peek()).types = new HashSet();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }

            // src/com/mbien/opencl/antlr/CL.g:81:5: ( ( external_declaration )+ )
            // src/com/mbien/opencl/antlr/CL.g:81:7: ( external_declaration )+
            {
            // src/com/mbien/opencl/antlr/CL.g:81:7: ( external_declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==BUILTIN_TYPE||LA1_0==IDENTIFIER||LA1_0==31||LA1_0==33||(LA1_0 >= 64 && LA1_0 <= 65)||(LA1_0 >= 68 && LA1_0 <= 69)||(LA1_0 >= 74 && LA1_0 <= 75)||LA1_0==77||(LA1_0 >= 80 && LA1_0 <= 84)||LA1_0==86||(LA1_0 >= 88 && LA1_0 <= 89)||(LA1_0 >= 91 && LA1_0 <= 95)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/com/mbien/opencl/antlr/CL.g:81:7: external_declaration
            	    {
            	    pushFollow(FOLLOW_external_declaration_in_translation_unit85);
            	    external_declaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, translation_unit_StartIndex); }

            Symbols_stack.pop();

        }
        return ;
    }
    // $ANTLR end "translation_unit"



    // $ANTLR start "external_declaration"
    // src/com/mbien/opencl/antlr/CL.g:98:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );
    public final void external_declaration() throws RecognitionException {
        int external_declaration_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }

            // src/com/mbien/opencl/antlr/CL.g:100:5: ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==64||LA2_0==75||LA2_0==84||LA2_0==88) ) {
                int LA2_1 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==81) ) {
                int LA2_2 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 2, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==94) ) {
                int LA2_3 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 3, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==65) ) {
                int LA2_4 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 4, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==BUILTIN_TYPE) ) {
                int LA2_5 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 5, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==93) ) {
                int LA2_6 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 6, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==83) ) {
                int LA2_7 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 7, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==80) ) {
                int LA2_8 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 8, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==86) ) {
                int LA2_9 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 9, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==89||LA2_0==92) ) {
                int LA2_10 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 10, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==74) ) {
                int LA2_11 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 11, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==IDENTIFIER) ) {
                int LA2_12 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( ((isTypeName(input.LT(1).getText()))) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 12, input);

                    throw nvae;

                }
            }
            else if ( ((LA2_0 >= 68 && LA2_0 <= 69)||LA2_0==77||LA2_0==82||LA2_0==95) ) {
                int LA2_13 = input.LA(2);

                if ( (synpred4_CL()) ) {
                    alt2=1;
                }
                else if ( (true) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 13, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==33) && (synpred4_CL())) {
                alt2=1;
            }
            else if ( (LA2_0==31) && (synpred4_CL())) {
                alt2=1;
            }
            else if ( (LA2_0==91) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // src/com/mbien/opencl/antlr/CL.g:100:7: ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition
                    {
                    pushFollow(FOLLOW_function_definition_in_external_declaration127);
                    function_definition();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/com/mbien/opencl/antlr/CL.g:101:7: declaration
                    {
                    pushFollow(FOLLOW_declaration_in_external_declaration135);
                    declaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, external_declaration_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "external_declaration"



    // $ANTLR start "function_definition"
    // src/com/mbien/opencl/antlr/CL.g:104:1: function_definition : ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) ;
    public final void function_definition() throws RecognitionException {
        Symbols_stack.push(new Symbols_scope());

        int function_definition_StartIndex = input.index();


          ((Symbols_scope)Symbols_stack.peek()).types = new HashSet();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return ; }

            // src/com/mbien/opencl/antlr/CL.g:109:5: ( ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) )
            // src/com/mbien/opencl/antlr/CL.g:109:10: ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement )
            {
            // src/com/mbien/opencl/antlr/CL.g:109:10: ( declaration_specifiers )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==BUILTIN_TYPE||(LA3_0 >= 64 && LA3_0 <= 65)||(LA3_0 >= 68 && LA3_0 <= 69)||(LA3_0 >= 74 && LA3_0 <= 75)||LA3_0==77||(LA3_0 >= 80 && LA3_0 <= 84)||LA3_0==86||(LA3_0 >= 88 && LA3_0 <= 89)||(LA3_0 >= 92 && LA3_0 <= 95)) ) {
                alt3=1;
            }
            else if ( (LA3_0==IDENTIFIER) ) {
                switch ( input.LA(2) ) {
                    case 33:
                        {
                        alt3=1;
                        }
                        break;
                    case IDENTIFIER:
                        {
                        int LA3_17 = input.LA(3);

                        if ( (((synpred5_CL()&&synpred5_CL())&&(isTypeName(input.LT(1).getText())))) ) {
                            alt3=1;
                        }
                        }
                        break;
                    case 31:
                        {
                        int LA3_18 = input.LA(3);

                        if ( (((synpred5_CL()&&synpred5_CL())&&(isTypeName(input.LT(1).getText())))) ) {
                            alt3=1;
                        }
                        }
                        break;
                    case 64:
                    case 75:
                    case 84:
                    case 88:
                        {
                        int LA3_19 = input.LA(3);

                        if ( (((synpred5_CL()&&synpred5_CL())&&(isTypeName(input.LT(1).getText())))) ) {
                            alt3=1;
                        }
                        }
                        break;
                    case 81:
                        {
                        int LA3_20 = input.LA(3);
